--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title> Miar's personal Site</title>
   </head>
-  <body >
+  <body>
     <center>
       <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/93bb1096059215.5ef518f8f2ae4.gif">
       <hr>
       <div class="iframe-container">
-        <iframe width="1280" height="720" src="https://www.youtube.com/embed/mDYqT0_9VR4?vq=1080" title="The Call | Season 2022 Cinematic - League of Legends (ft. 2WEI, Louis Leibfried, and Edda Hayes)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="1280" height="720" src="https://www.youtube.com/embed/mDYqT0_9VR4?vq=1080" title="The Call | Season 2022 Cinematic - League of Legends (ft. 2WEI, Louis Leibfried, and Edda Hayes)" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <hr>
       <table cellspacing=100>
@@ -17,6 +18,10 @@
         frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></td>
         <td><iframe src="https://open.spotify.com/embed/playlist/17kVXV92yyXqmkk8yQsVg0?utm_source=generator" width="100%" height="380"
         frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></td>
+        <td><iframe src="https://open.spotify.com/embed/track/4WEuEfFiczWxblHyuucSBL?utm_source=generator" width="100%" height="380" frameBorder="0"
+        allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></td>
+        <td><iframe src="https://open.spotify.com/embed/track/2IfE8FhnPPEBSS4rL1qhBb?utm_source=generator" width="100%" height="380" frameBorder="0" 
+        allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></td>
       </table>
     </center>
 
